WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117692
REGRESSION(
r151632
) : Build error on ASSERT(WTF_USE_GRAMMAR_CHECKING)
https://bugs.webkit.org/show_bug.cgi?id=117692
Summary
REGRESSION(r151632) : Build error on ASSERT(WTF_USE_GRAMMAR_CHECKING)
KyungTae Kim
Reported
2013-06-17 02:12:04 PDT
Because of the ASSERT(WTF_USE_GRAMMAR_CHECKING) codes on Editor.cpp, build error occured on debug build after
r151632
. Fixing temporary the Platform.h part of
r151632
. Source/WebCore/editing/Editor.cpp: In member function ‘void WebCore::Editor::advanceToNextMisspelling(bool)’: Source/WebCore/editing/Editor.cpp:1771:9: error: ‘WTF_USE_GRAMMAR_CHECKING’ was not declared in this scope Source/WebCore/editing/Editor.cpp: In member function ‘void WebCore::Editor::markMisspellingsOrBadGrammar(const WebCore::VisibleSelection&, bool, WTF::RefPtr<WebCore::Range>&)’: Source/WebCore/editing/Editor.cpp:2067:9: error: ‘WTF_USE_GRAMMAR_CHECKING’ was not declared in this scope Source/WebCore/editing/Editor.cpp: In member function ‘void WebCore::Editor::markBadGrammar(const WebCore::VisibleSelection&)’: Source/WebCore/editing/Editor.cpp:2095:5: error: ‘WTF_USE_GRAMMAR_CHECKING’ was not declared in this scope
Attachments
Patch
(1.12 KB, patch)
2013-06-17 02:14 PDT
,
KyungTae Kim
no flags
Details
Formatted Diff
Diff
Patch
(2.26 KB, patch)
2013-06-17 02:47 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Patch
(2.29 KB, patch)
2013-06-17 03:07 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Patch
(9.09 KB, patch)
2013-06-17 05:11 PDT
,
Allan Sandfeld Jensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
KyungTae Kim
Comment 1
2013-06-17 02:14:49 PDT
Created
attachment 204801
[details]
Patch
Allan Sandfeld Jensen
Comment 2
2013-06-17 02:40:35 PDT
Could you fix the assert instead?
Allan Sandfeld Jensen
Comment 3
2013-06-17 02:47:05 PDT
Created
attachment 204803
[details]
Patch
EFL EWS Bot
Comment 4
2013-06-17 02:51:08 PDT
Comment on
attachment 204803
[details]
Patch
Attachment 204803
[details]
did not pass efl-ews (efl): Output:
http://webkit-queues.appspot.com/results/858391
Early Warning System Bot
Comment 5
2013-06-17 02:51:25 PDT
Comment on
attachment 204803
[details]
Patch
Attachment 204803
[details]
did not pass qt-ews (qt): Output:
http://webkit-queues.appspot.com/results/849318
EFL EWS Bot
Comment 6
2013-06-17 02:52:17 PDT
Comment on
attachment 204803
[details]
Patch
Attachment 204803
[details]
did not pass efl-wk2-ews (efl-wk2): Output:
http://webkit-queues.appspot.com/results/907336
Early Warning System Bot
Comment 7
2013-06-17 02:52:45 PDT
Comment on
attachment 204803
[details]
Patch
Attachment 204803
[details]
did not pass qt-wk2-ews (qt-wk2): Output:
http://webkit-queues.appspot.com/results/939006
Allan Sandfeld Jensen
Comment 8
2013-06-17 03:07:00 PDT
Created
attachment 204804
[details]
Patch
KyungTae Kim
Comment 9
2013-06-17 04:22:43 PDT
(In reply to
comment #8
)
> Created an attachment (id=204804) [details] > Patch
Your approach seems better than mine, please check the ASSERT codes in the below, too: Source/WebCore/editing/Editor.cpp: In member function ‘void WebCore::Editor::markMisspellingsOrBadGrammar(const WebCore::VisibleSelection&, bool, WTF::RefPtr<WebCore::Range>&)’: Source/WebCore/editing/Editor.cpp:2067:9: error: ‘WTF_USE_GRAMMAR_CHECKING’ was not declared in this scope Source/WebCore/editing/Editor.cpp: In member function ‘void WebCore::Editor::markBadGrammar(const WebCore::VisibleSelection&)’: Source/WebCore/editing/Editor.cpp:2095:5: error: ‘WTF_USE_GRAMMAR_CHECKING’ was not declared in this scope
Sergio Villar Senin
Comment 10
2013-06-17 04:35:54 PDT
I'm also getting errors in TextCheckingHelper.cpp
Grzegorz Czajkowski
Comment 11
2013-06-17 05:04:49 PDT
I am sorry for the debug break :/ It seems that grammar checking needs more guards in WebCore. Do you mind if I revert the problematic patch? Thanks
Allan Sandfeld Jensen
Comment 12
2013-06-17 05:11:51 PDT
Created
attachment 204809
[details]
Patch
Jocelyn Turcotte
Comment 13
2013-06-17 06:39:05 PDT
Comment on
attachment 204809
[details]
Patch r=me I wonder if a runtime check for the context menu would have been enough though.
Allan Sandfeld Jensen
Comment 14
2013-06-17 06:58:03 PDT
Comment on
attachment 204809
[details]
Patch Clearing flags on attachment: 204809 Committed
r151640
: <
http://trac.webkit.org/changeset/151640
>
Allan Sandfeld Jensen
Comment 15
2013-06-17 06:58:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug