REGRESSSION(r151632) : Build error on ASSERT(WTF_USE_GRAMMAR_CHECKING) https://bugs.webkit.org/show_bug.cgi?id=117692

Reviewed by Jocelyn Turcotte.

Ifdef the feature-depending code and fix the assertions to check runtime conditions.

* editing/Editor.cpp:
(WebCore::Editor::advanceToNextMisspelling):
(WebCore::Editor::markMisspellingsOrBadGrammar):
(WebCore::Editor::markBadGrammar):
* editing/TextCheckingHelper.cpp:
(WebCore::findBadGrammars):
(WebCore::TextCheckingHelper::findFirstGrammarDetail):
(WebCore::TextCheckingHelper::findFirstBadGrammar):
(WebCore::TextCheckingHelper::isUngrammatical):
(WebCore::TextCheckingHelper::markAllBadGrammar):
(WebCore::checkTextOfParagraph):
* editing/TextCheckingHelper.h:

Canonical link: https://commits.webkit.org/135840@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151640 268f45cc-cd09-0410-ab3c-d52691b4dbfc